set(TARGET_NAME lua)
add_executable(${TARGET_NAME}
    lvm.c
    ldo.c
    lgc.c
    lcode.c
    lapi.c
    linit.c
    lstring.c
    lobject.c
    ltm.c
    lzio.c
    lstate.c
    ltable.c
    lopcodes.c
    llex.c
    ltests.c
    lctype.c
    ldebug.c
    ldump.c
    lmem.c
    lundump.c
    lparser.c
    lfunc.c
    #
    ldblib.c
    loslib.c
    loadlib.c
    lmathlib.c
    lauxlib.c
    lbaselib.c
    lcorolib.c
    ltablib.c
    liolib.c
    lstrlib.c
    lbitlib.c
    #
    lua.c
    )
    target_compile_definitions(${TARGET_NAME} PRIVATE
    _CRT_SECURE_NO_WARNINGS
    )
